--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,3 +17,21 @@ jobs:
  
       - name: Execução de Testes
         run: echo "Rodando testes..."
+
+      - name: Configurar cache do Poetry
+              uses: actions/cache@v3
+              with:
+                path: |
+                  ~/.cache/pypoetry
+                  ~/.cache/pip
+                key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+                restore-keys: |
+                  poetry-${{ runner.os }}-
+
+      - name: Instalar o Poetry
+              run: |
+                  curl -sSL https://install.python-poetry.org | python3 -
+                  echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Instalar dependências
+              run: poetry install --no-root
