--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -35,3 +35,7 @@ jobs:
 
       - name: Instalar dependências
         run: poetry install --no-root
+
+      steps:
+      - name: Checkout do Código
+        uses: actions/checkout@v3
